# elspr-reproduction

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  GOAL.md  LEVEL_2_READINESS.md  LICENSE  PROGRESS.md  README.md  REPRODUCIBILITY.md  UPSTREAM_AUDIT.md  pyproject.toml
.github/: PULL_REQUEST_LEVEL_1.md  pull_request_template.md
.github/workflows/: ci.yml
configs/: data.yaml  eval.yaml  judge.yaml  train_qwen.yaml  training_data.yaml
configs/manifests/: level2_helpful_base_5x50.json
configs/prompts/: cot_v1.txt  cot_v1_system.txt
reports/: LEVEL_1_REPORT.md  LEVEL_2_DRY_RUN.md  LEVEL_2_RESOURCE_AUDIT.md
src/elspr/: __init__.py  cli.py  io.py  schemas.py  toy.py
src/elspr/data/: __init__.py  prepare.py
src/elspr/evaluation/: __init__.py  evaluate.py
src/elspr/filtering/: __init__.py  filter.py
src/elspr/graph/: __init__.py  build.py  entropy.py  reconstruct.py  scc.py  serialization.py  visualization.py
src/elspr/judging/: __init__.py  aggregation.py  executor.py  requests.py
src/elspr/training/: __init__.py  runner.py  variants.py
tests/: test_cli_pipeline.py  test_data_prepare.py  test_end_to_end_toy.py  test_entropy.py  test_evaluation.py  test_filtering.py  test_graph_build.py  test_judge_executor.py  test_judge_requests.py  test_package.py  test_pair_aggregation.py  test_reconstruction.py  test_scc_metrics.py  test_training_runner.py  test_training_variants.py  test_visualization.py
