[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[project]
name = "elspr-reproduction"
version = "0.1.0"
description = "Auditable reproduction of ELSPR graph-based preference-data purification"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "poo1D" }]
dependencies = [
  "networkx>=3.2,<4",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7",
  "structlog>=24.1,<26",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
training = [
  "accelerate>=1.2,<2",
  "peft>=0.14,<1",
  "torch>=2.5,<3",
  "transformers>=4.48,<5",
]

[project.scripts]
elspr = "elspr.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
]

[tool.uv.build-backend]
module-name = "elspr"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
